# python-minecraft-data-latest

./: pyproject.toml  setup.py
.github/workflows/: release.yml
